--- a/django_sms_project/students/templates/students/index.html
+++ b/django_sms_project/students/templates/students/index.html
@@ -1,141 +1,122 @@
-{% load static %}
+{% extends 'students/base.html' %}
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Students Management System</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    </head>
-    <body class="d-flex flex-column min-vh-100">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <i class="fa-solid fa-graduation-cap fa-lg"></i>Student Management Sysytem</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fa-solid fa-list"></i>
-                  All students
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fa-solid fa-plus"></i>
-                  Add student
-                </a>
-              </li>
-            </ul>
+{% block body %}
+<h3 class="m-4"> All students</h3>
+<div class="row">
+    <div class="col-12">
+      {% if students %}
+
+          <div class="card text-white bg-primary ms-4 me-4 mb-4" >
+            <div class="card-header">
+              <i class="fa-solid fa-list"></i>
+                Students Records
+            </div>
+            <div class="card-body">
+              <p class="card-text">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                      <thead>
+                        <tr>
+                          <th scope="col">Student number</th>
+                          <th scope="col">First name</th>
+                          <th scope="col">Last name</th>
+                          <th scope="col">E-mail</th>
+                          <th scope="col">Field of study</th>
+                          <th scope="col">GPA</th>
+                          <th scope="col">Actions</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {% for student in students %}
+                          <tr>
+                            <td>{{ student.student_number }}</td>
+                            <td>{{ student.first_name }}</td>
+                            <td>{{ student.last_name }}</td>
+                            <td>{{ student.email }}</td>
+                            <td>{{ student.field_of_study }}</td>
+                            <td>{{ student.gpa }}</td>
+                            <td>
+                                <button type="button" class="btn btn-success me-1" href="{% url 'view_student' student.id %}" data-bs-toggle="modal" data-bs-target="#myModal{{student.id}}">
+                                  <i class="fa-solid fa-circle-info fa-lg"></i>
+                                </button>
+                                <!-- Modal view -->
+                                <div class="modal" id="myModal{{student.id}}" tabindex="-1" aria-labelledby="myModalLabel1" aria-hidden="true">
+                                  <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title">
+                                          Student {{ student.first_name }} {{ student.last_name }}
+                                        </h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                          <span aria-hidden="true"></span>
+                                        </button>
+                                      </div>
+                                      <div class="modal-body">
+                                        <ul class="list-unstyled">
+                                            <li> Student number: <strong>{{ student.student_number }}</strong></li>
+                                            <li> First name: <strong>{{ student.first_name }}</strong></li>
+                                            <li> Last name: <strong>{{ student.last_name }}</strong></li>
+                                            <li> E-mail: <strong>{{ student.email }}</strong></li>
+                                            <li> Field of study: <strong>{{ student.field_of_study }}</strong></li>
+                                            <li> GPA: <strong>{{ student.gpa }}</strong></li>
+
+                                        </ul>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <!-- End of modal view -->
+                                <a class="btn btn-warning me-1" href = "{% url 'edit' student.id %}">
+                                  <i class="fa-solid fa-pen-to-square fa-lg"></i>
+                                </a>
+                                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete{{student.id}}" >
+                                  <i class="fa-solid fa-trash fa-lg"></i>
+                                </button>
+                                <!-- Modal view -->
+                                <div class="modal" id="delete{{student.id}}" tabindex="-1" aria-labelledby="myModalLabel2" aria-hidden="true">
+                                  <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title">
+                                          Student {{ student.first_name }} {{ student.last_name }}
+                                        </h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                          <span aria-hidden="true"></span>
+                                        </button>
+                                      </div>
+                                      <div class="modal-body">
+                                        <p>Are you sure to delete this student?</p>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <form action="{% url 'delete' student.id %}" method="POST">
+                                          {% csrf_token %}
+                                          <input type="submit" class="btn btn-primary" value="Delete">
+                                        </form>
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <!-- End of modal view -->
+                            </td>
+                          </tr>
+                        {% endfor %}
+                      </tbody>
+                    </table>
+
+
+                </div>
+              </p>
           </div>
-        </div>
-      </nav>
+          </div>
 
-      <div class="container-fluid">
-          <h3 class="m-4"> All students</h3>
-          <div class="row">
-              <div class="col-12">
-                {% if students %}
-
-                    <div class="card text-white bg-primary ms-4 me-4 mb-4" >
-                      <div class="card-header">
-                        <i class="fa-solid fa-list"></i>
-                          Students Records
-                      </div>
-                      <div class="card-body">
-                        <p class="card-text">
-                          <div class="table-responsive">
-                              <table class="table table-hover">
-                                <thead>
-                                  <tr>
-                                    <th scope="col">Student number</th>
-                                    <th scope="col">First name</th>
-                                    <th scope="col">Last name</th>
-                                    <th scope="col">E-mail</th>
-                                    <th scope="col">Field of study</th>
-                                    <th scope="col">GPA</th>
-                                    <th scope="col">Actions</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  {% for student in students %}
-                                    <tr>
-                                      <td>{{ student.student_number }}</td>
-                                      <td>{{ student.first_name }}</td>
-                                      <td>{{ student.last_name }}</td>
-                                      <td>{{ student.email }}</td>
-                                      <td>{{ student.field_of_study }}</td>
-                                      <td>{{ student.gpa }}</td>
-                                      <td>
-                                          <button type="button" class="btn btn-success me-1" href="{% url 'view_student' student.id %}" data-bs-toggle="modal" data-bs-target="#myModal{{student.id}}">
-                                            <i class="fa-solid fa-circle-info fa-lg"></i>
-                                          </button>
-                                          <!-- Modal view -->
-                                          <div class="modal" id="myModal{{student.id}}" tabindex="-1" aria-labelledby="myModalLabel1" aria-hidden="true">
-                                            <div class="modal-dialog" role="document">
-                                              <div class="modal-content">
-                                                <div class="modal-header">
-                                                  <h5 class="modal-title">
-                                                    Student {{ student.first_name }} {{ student.last_name }}
-                                                  </h5>
-                                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true"></span>
-                                                  </button>
-                                                </div>
-                                                <div class="modal-body">
-                                                  <ul class="list-unstyled">
-                                                      <li> Student number: <strong>{{ student.student_number }}</strong></li>
-                                                      <li> First name: <strong>{{ student.first_name }}</strong></li>
-                                                      <li> Last name: <strong>{{ student.last_name }}</strong></li>
-                                                      <li> E-mail: <strong>{{ student.email }}</strong></li>
-                                                      <li> Field of study: <strong>{{ student.field_of_study }}</strong></li>
-                                                      <li> GPA: <strong>{{ student.gpa }}</strong></li>
-
-                                                  </ul>
-                                                </div>
-                                                <div class="modal-footer">
-                                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
-                                                </div>
-                                              </div>
-                                            </div>
-                                          </div>
-                                          <!-- End of modal view -->
-                                      </td>
-                                    </tr>
-                                  {% endfor %}
-                                </tbody>
-                              </table>
-
-
-                          </div>
-                        </p>
-                    </div>
-                    </div>
-
-                {% else %}
-                  <h5 class="alert alert-primary ms-4 me-4">No student records</h5>
-                {% endif %}
-                
-              </div>
-          </div> 
-      </div>
-      <footer class="mt-auto mb4">
-        <div class="text-center">
-           <span>
-              Copyright &copy <script> document.write(new Date().getFullYear())</script> KK
-           </span> 
-        </div>
-      </footer>
-
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-
-    </body>
-</html>
+      {% else %}
+        <h5 class="alert alert-primary ms-4 me-4">No student records</h5>
+      {% endif %}
+      
+    </div>
+</div> 
+{% endblock %}
